# findworks

./: package-lock.json
backend/: projects_by_team_nested.json  pyproject.toml  test.py
backend/app/: convert_json.py  main.py  schemas.py  services.py
backend/data/: teams_v2.json
frontend/: package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/assets/: 0.DYMM0Qob.css  _layout.Dndj4pBW.css
frontend/.svelte-kit/output/client/_app/immutable/chunks/: BHAriGzp.js  BQZi4i55.js  DnRIBi2z.js
frontend/.svelte-kit/output/server/: index.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: index.js  internal.js
frontend/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
frontend/.svelte-kit/output/server/entries/pages/: _page.server.ts.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: proxy+page.server.ts
frontend/src/: app.css
frontend/src/lib/components/core/: Navbar.svelte
frontend/src/lib/components/ui/: PeopleCard.svelte  TeamCard.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/team/: [team].svelte
frontend/src/routes/team/[teamId]/: +page.server.ts  +page.svelte
(+8 files in other folders)
