[project]
name = "findworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.116.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.0.0",
]
